--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <a class="page_menu_footer_a " href="https://www.linkedin.com/ "><img src="images/linkedin.svg "
                                 alt="Linkedin " /></a>
                         <a class="page_menu_footer_a " href="https://github.com/sabinaasayeed/blog_project "><img
-                                src="images/github.svg " alt="GitHub " /></a></nav>
+                                src="images/icons8-github.svg " alt="GitHub " /></a></nav>
             </div>
         </footer>
     </div>
