--- a/index.html
+++ b/index.html
@@ -11,67 +11,66 @@
 <body>
     <div class="Body-wrapper">
         <header>
-            <div class="header">
-                <div class="inner header_inner">
+            <div class="header-style">
+                <div class="inner header-content">
                     <div class="logo">
-                        <span class="logo_span">DevLog</span>
+                        <span class="logo-text">DevLog</span>
                     </div>
-                    <nav class="page_menu">
-                        <a class="page_menu_a" href="blog-post.html">Blog</a>
-                        <a class="page_menu_a " href="# ">Subscribe</a>
+                    <nav class="links">
+                        <a class="links_a" href="blog-post.html">Blog</a>
+                        <a class="links_a " href="# ">Subscribe</a>
                     </nav>
                 </div>
             </div>
         </header>
         <main>
             <div class="blog">
-                <div class="inner inner_padding">
+                <div class="inner pad">
                     <h1 class="inner_h1"><strong class="h1_strong">Welcome to  DevLog.</strong><br />Expore your blogs here</h1>
-                    <div class="blog_posts">
-                        <div id="image_1">
-                            <img class="blog_posts_img" src="images/rome.jpg" alt="Rome">
-                            <div class="blog_post_teaser">
-                                <h1 class="blog_post_h1 c_orange">Rome <br /><span class="blog_post_span">The City Of Seven Hills</span></h1>
-                                <p class="blog_post_p">A heady mix of haunting ruins, awe-inspiring art and vibrant street life, Italy’s hot-blooded capital is one of the world’s most romantic and charismatic cities…</p>
-                                <a class="blog_post_a" href="blog-post.html">Read More →</a>
+                    <div class="post_content">
+                        <div id="post_1">
+                            <img class="post_img" src="images/mum.jpg" alt="Mumbai">
+                            <div class="post_text">
+                                <h1 class="post_text_h1 c_orange">Mumbai<br /></h1>
+                                <p class="post_text_p">Mumbai (formerly called Bombay) is a densely populated city on India’s west coast. A financial center, it's India's largest city. On the Mumbai Harbour waterfront stands the iconic Gateway of India stone arch, built by…</p>
+                                <a class="post_text_a" href="blog-post.html">Read More →</a>
                             </div>
                         </div>
-                        <div id="image_2">
-                            <img class="blog_posts_img" src="images/banf.jpg" alt="Banf">
-                            <div class="blog_post_teaser">
-                                <h1 class="blog_post_h1 c_green">Banff National Park<br /><span class="blog_post_span">Heaven On Earth</span></h1>
-                                <p class="blog_post_p">Escape to the rugged beauty of Canada’s first national park.Towering like giant castles in the sky, the mountains of Banff provide endless opportunities for wildlife-watching, hiking, boating, climbing, mountain biking,
-                                    skiing or simply communing with nature…</p>
-                                <a class="blog_post_a" href="blog-post.html">Read More →</a>
+                        <div id="post_2">
+                            <img class="post_img" src="images/delhi.jpg" alt="Delhi">
+                            <div class="post_text">
+                                <h1 class="post_text_h1 c_green">Delhi<br /></h1>
+                                <p class="post_text_p">Delhi, India’s capital territory, is a massive metropolitan area in the country’s north. In Old Delhi, a neighborhood dating to the 1600s, stands the imposing Mughal-era Red Fort, a symbol of India, and the sprawling Jama Masjid mosque, whose courtyard…</p>
+                                <a class="post_text_a" href="blog-post.html">Read More →</a>
                             </div>
                         </div>
-                        <div id="image_3">
-                            <img class="blog_posts_img" src="images/paris.jpg" alt="Paris">
-                            <div class="blog_post_teaser">
-                                <h1 class="blog_post_h1 c_blue">Paris<br /><span class="blog_post_span">City Of Love</span></h1>
-                                <p class="blog_post_p">There is no escaping the romance of Paris. In the early 19th century the French capital revelled in the artistic and literary liberation of Romanticism, yet this graceful city has always inspired love…</p>
-                                <a class="blog_post_a" href="blog-post.html">Read More →</a>
+                        <div id="post_3">
+                            <img class="post_img" src="images/ahemdabad.jpg" alt="Ahemdabad">
+                            <div class="post_text">
+                                <h1 class="post_text_h1 c_blue">Ahemdabad<br /></h1>
+                                <p class="post_text_p">Ahmedabad, in western India, is the largest city in the state of Gujarat. The Sabarmati River runs through its center. On the western bank is the Gandhi Ashram at Sabarmati, which displays the spiritual leader’s living quarters and artifacts…</p>
+                                <a class="post_text_a" href="blog-post.html">Read More →</a>
                             </div>
                         </div>          
                     </div>
-                    <a href="blog-post.html" class="button">Read the Blog</a>
+                    <a href="blog-post.html" class="button">View Blog</a>
                 </div>
             </div>
         </main>
         <footer class="footer">
             <div class="inner footer_inner">
                 <div class="logo">
-                    <span class="logo_span">DevLog</span>
+                    <span class="logo-text">DevLog</span>
                 </div>
-                <nav class="page_menu_footer">
-                   <a class="page_menu_footer_a " href="https://twitter.com "><img src="images/twitter.svg "
+                <nav class="links-footer">
+                   <a class="links-footer_a " href="https://twitter.com "><img src="images/twitter.svg "
                                 alt="Twitter " /></a>
-                        <a class="page_menu_footer_a " href="https://www.facebook.com "><img src="images/facebook.svg "
+                        <a class="links-footer_a " href="https://www.facebook.com "><img src="images/facebook.svg "
                                 alt="Facebook " /></a>
-                        <a class="page_menu_footer_a " href="https://www.linkedin.com/ "><img src="images/linkedin.svg "
+                        <a class="links-footer_a " href="https://www.linkedin.com/ "><img src="images/linkedin.svg "
                                 alt="Linkedin " /></a>
-                        <a class="page_menu_footer_a " href="https://github.com/sabinaasayeed/blog_project "><img
-                                src="images/icons8-github.svg " alt="GitHub " /></a></nav>
+                        <a class="links-footer_a " href="https://github.com/smithg09/FEND_01_Personal_Blog_Website"><img
+                                src="images/icons8-github.svg " alt="GitHub" /></a></nav>
             </div>
         </footer>
     </div>
