Added <u> and qoutes

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                             <img class="post_img" src="images/mum.jpg" alt="Mumbai">
                             <div class="post_text">
                                 <h1 class="post_text_h1 c_orange">Mumbai<br /></h1>
-                                <p class="post_text_p">Mumbai (formerly called Bombay) is a densely populated city on India’s west coast. A financial center, it's India's largest city. On the Mumbai Harbour waterfront stands the iconic Gateway of India stone arch, built by…</p>
+                                <p class="post_text_p">Mumbai <u>formerly called Bombay</u> is a densely populated city on India’s west coast. A financial center, it's India's largest city. On the Mumbai Harbour waterfront stands the iconic Gateway of India stone arch, built by…</p>
                                 <a class="post_text_a" href="singleBlog.html">Read More →</a>
                             </div>
                         </div>
@@ -40,7 +40,7 @@
                             <img class="post_img" src="images/delhi.jpg" alt="Delhi">
                             <div class="post_text">
                                 <h1 class="post_text_h1 c_green">Delhi<br /></h1>
-                                <p class="post_text_p">Delhi, India’s capital territory, is a massive metropolitan area in the country’s north. In Old Delhi, a neighborhood dating to the 1600s, stands the imposing Mughal-era Red Fort, a symbol of India, and the sprawling Jama Masjid mosque, whose courtyard…</p>
+                                <p class="post_text_p">Delhi, <u>India’s capital territory</u>, is a massive metropolitan area in the country’s north. In Old Delhi, a neighborhood dating to the 1600s, stands the imposing Mughal-era Red Fort, a symbol of India, and the sprawling Jama Masjid mosque, whose courtyard…</p>
                                 <a class="post_text_a" href="singleBlog.html">Read More →</a>
                             </div>
                         </div>
@@ -48,7 +48,7 @@
                             <img class="post_img" src="images/ahemdabad.jpg" alt="Ahemdabad">
                             <div class="post_text">
                                 <h1 class="post_text_h1 c_blue">Ahemdabad<br /></h1>
-                                <p class="post_text_p">Ahmedabad, in western India, is the largest city in the state of Gujarat. The Sabarmati River runs through its center. On the western bank is the Gandhi Ashram at Sabarmati, which displays the spiritual leader’s living quarters and artifacts…</p>
+                                <p class="post_text_p">Ahmedabad, <u>in western India, is the largest city in the state of Gujarat</u>. The Sabarmati River runs through its center. On the western bank is the Gandhi Ashram at Sabarmati, which displays the spiritual leader’s living quarters and artifacts…</p>
                                 <a class="post_text_a" href="singleBlog.html">Read More →</a>
                             </div>
                         </div>          
